--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.xr.interaction.toolkit": "0.9.3-preview",
     "com.unity.xr.legacyinputhelpers": "1.3.11",
     "com.unity.xr.management": "3.0.6",
+    "com.unity.xr.oculus": "1.2.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
